# esp-qcloud

./: .gitlab-ci.yml  CMakeLists.txt  Kconfig.projbuild  README.md
config/certs/: dev_cert.crt  dev_private.key  qcloud_root_cert.crt
config/mass_mfg/: README.md  multipule_mfg_config.csv  multipule_mfg_values.csv  single_mfg_config.csv
config/mass_mfg/tools/: README.md  mfg_create_dev.py  mfg_get_dev_list.py
config/sdkconfig_defaults/: sdkconfig.defaults.esp32  sdkconfig.defaults.esp32c3  sdkconfig.defaults.esp32s2  sdkconfig.defaults.esp32s3  sdkconfig.hight_perf.esp32  sdkconfig.hight_perf.esp32c3  sdkconfig.hight_perf.esp32s2  sdkconfig.low_perf.esp32  sdkconfig.low_perf.esp32c3  sdkconfig.low_perf.esp32s2
docs/: ESP32PerformanceOptions.md  README.md
examples/led_light/: CMakeLists.txt  README.md  data_template_light.json  device_info.csv  partitions.csv  sdkconfig.defaults
examples/led_light/main/: CMakeLists.txt  Kconfig.projbuild  app_driver.c  app_main.c  app_priv.h  (+3 more)
include/: esp_qcloud_console.h  esp_qcloud_iothub.h  esp_qcloud_log.h  esp_qcloud_mem.h  esp_qcloud_mqtt.h  esp_qcloud_prov.h  esp_qcloud_storage.h  esp_qcloud_utils.h
src/console/: esp_qcloud_commands.c  esp_qcloud_console.c
src/iothub/: esp_qcloud_device.c  esp_qcloud_iothub.c  esp_qcloud_ota.c
src/log/: esp_qcloud_log.c  esp_qcloud_log_flash.c  esp_qcloud_log_flash.h  esp_qcloud_log_iothub.c  esp_qcloud_log_iothub.h
src/mqtt/: esp_qcloud_mqtt.c
src/provisioning/: esp_qcloud_prov.c  esp_qcloud_prov_ble.c  esp_qcloud_prov_smartconfig.c  esp_qcloud_prov_softapconfig.c  esp_qcloud_prov_tencent.c  esp_qcloud_prov_tencent.h  esp_qcloud_wifi.c
src/utils/: esp_qcloud_mem.c  esp_qcloud_reboot.c  esp_qcloud_storage.c  esp_qcloud_timesync.c  esp_qcloud_utils.c
(+3 files in other folders)
